Changes with APR b1

  *) Libtool'ized APR and converted all the makefiles to share rules
     from helpers/rules.mk. [Greg Stein]

  *) Remove a warning on FreeBSD.  FreeBSD defines TCP_NO_PUSH, but we
     don't actually use it.  This causes os_cork to be defined but not
     used.  This patch keeps us from defining os_cork and os_uncork on
     FreeBSD.  [Ryan Bloom]

  *) Keep apr_terminate from seg faulting on terminate.  This is
     happening on systems that do not NULL out locks when they are
     destroyed.  To keep this from happening, we set the locks to
     NULL after destroying them in apr_terminate, and we have to 
     check for NULL in free_blocks.  
     [Allan Edwards and Gregory Nicholls <gnicholls@level8.com>]

  *) Remove the ability to allocate memory out of a NULL pool.
     [Ryan Bloom]

  *) Add an APR_GET_POOL macro to get a pool from any APR type that has
     a pool.  This requires that ALL apr types put the pool as the first
     field in their structure. [Ryan Bloom]

  *) Begin to remove the ability to allocate out of NULL pools.  The first
     problem to solve, is that we need an apr_lock in order to allocate
     pools, so that we can lock things out when allocating.  So, how do we
     allocate locks without a pool to allocate from?  The answer is to create
     a global_apr_pool, which is a bootstrapping pool.  There should NEVER
     be a sub-pool off this pool, and it is static to an APR file.  This is
     only used to allow us to allocate the locks cleanly, without using the
     NULL pool hack.  [Ryan Bloom]

  *) Fix a logic error in the poll code when implemented using select.
     [Nick Caruso <ncaruso@gamesville.com>]

  *) FreeBSD does not support sendfile() in combination with threads
     before version 4.2.  We no longer even try to support it.
     [Ryan Bloom]

  *) On FreeBSD, it is possible for the first call to sendfile to
     get EAGAIN, but still send some data.  This means that we cannot